fix top of slideshow being cut off
per discussion with Lisa and Bridget

--- a/public/styles/site/_component-slideshow.scss
+++ b/public/styles/site/_component-slideshow.scss
@@ -1,24 +1,20 @@
 .slideshow-container {
-	margin: -2.2em -0.75em -0 -0.75em;
+	margin: -1em -0.75em -0 -0.75em;
 
 	@media all and ( min-width: 655px ) {
-		margin-top: 0.8em;
+		margin-top: 1.9em;
 	}
 
 	@media all and ( min-width: 660px ) {
-		margin-top: -1.7em;
+		margin-top: -0.6em;
 	}
 
 	@media all and ( min-width: 765px ) {
-		margin-top: -2.7em;
+		margin-top: -1.5em;
 	}
 
 	@media all and ( min-width: 800px ) {
-		margin-top: -2em;
-	}
-
-	@media all and ( min-width: 850px ) {
-		margin-top: -2.1em;
+		margin-top: -0.9em;
 	}
 }
 
